# docs/swagger.yaml
@@ -76,6 +76,15 @@ paths:
   /brigades:
     get:
       description: Returns all brigades.
+      parameters:
+      - description: Maximum number of items to return; 0 means no limit
+        in: query
+        name: limit
+        type: integer
+      - description: Number of items to skip
+        in: query
+        name: offset
+        type: integer
       produces:
       - application/json
       responses:
@@ -85,6 +94,10 @@ paths:
             items:
               $ref: '#/definitions/brigade-service_service_brigade.Brigade'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gorouter.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
